src/objects/TCode_Product__c.object
<CustomObject>
    <description>Object stores products that can be sold within the campaign (TCode).</description>
    <fields>
        <fullName>Digital_Monthly_Price__c</fullName>
        <description>Used for UI only identification of old Digital monthly product.</description>
        <inlineHelpText>Used for UI only identification of old Digital monthly product - old acquisition flow.</inlineHelpText>
        <label>Legacy Digital Monthly Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Digital_Yearly_Price__c</fullName>
        <description>Used for UI only identification of old Digital yearly product.</description>
        <inlineHelpText>Used for UI only identification of old Digital yearly product - old acquisition flow.</inlineHelpText>
        <label>Legacy Digital Yearly Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Low_Start_Price__c</fullName>
        <label>Low Start Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offer_Base_Price__c</fullName>
        <formula>Offer__r.Base_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Offer.</description>
        <inlineHelpText>Lookup to Offer.</inlineHelpText>
        <label>Offer</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Selected product has to match Offer product.</errorMessage>
            <filterItems>
                <field>$Source.Product__c</field>
                <operation>equals</operation>
                <valueField>Offer__c.ZProduct__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Offer__c</referenceTo>
        <relationshipLabel>TCode Products</relationshipLabel>
        <relationshipName>TCode_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>TCode Products</relationshipLabel>
        <relationshipName>TCode_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TCodeManagement__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>TCodeManagement</label>
        <referenceTo>TCodeManagement__c</referenceTo>
        <relationshipLabel>TCode Products</relationshipLabel>
        <relationshipName>TCode_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Uniqueness_Check__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Field populated to make sure records are unique.</description>
        <inlineHelpText>Field populated to make sure records are unique.</inlineHelpText>
        <label>Uniqueness Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Web_Monthly_Price__c</fullName>
        <description>Used for UI only identification of old Web monthly product.</description>
        <inlineHelpText>Used for UI only identification of old Web monthly product - old acquisition flow.</inlineHelpText>
        <label>Legacy Web Monthly Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Web_Yearly_Price__c</fullName>
        <description>Used for UI only identification of old Web yearly product.</description>
        <inlineHelpText>Used for UI only identification of old Web yearly product - old acquisition flow.</inlineHelpText>
        <label>Legacy Web Yearly Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weekly_Price__c</fullName>
        <label>Weekly Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X13_Week_Price__c</fullName>
        <label>13 Week Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>TCode Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TCP-{00000}</displayFormat>
        <label>TCode Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TCode Products</pluralLabel>
    <recordTypes>
        <fullName>Offer</fullName>
        <active>true</active>
        <label>Offer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Zuora_Offer</fullName>
        <active>true</active>
        <label>Zuora Offer</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Low_Start_Price_For_Low_Start_TCode</fullName>
        <active>true</active>
        <description>You have to specify a valid Low Start Weekly Price for Low Start TCode type.</description>
        <errorConditionFormula>AND( RecordType.Name == &apos;Offer&apos;, OR(ISBLANK(Low_Start_Price__c), Low_Start_Price__c &lt; 0), ISPICKVAL( TCodeManagement__r.Type__c ,&apos;Low Start&apos;))</errorConditionFormula>
        <errorDisplayField>Low_Start_Price__c</errorDisplayField>
        <errorMessage>Low Start Weekly Price has to be specified for a Low Start TCode.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_fields_for_ZOffer</fullName>
        <active>true</active>
        <description>Offer Id, Frequency, Name, Friendly Name and Base Price are mandatory for ZOffer type.</description>
        <errorConditionFormula>AND(RecordType.Name==&apos;Zuora Offer&apos;,OR(
ISBLANK(Offer__c),
ISBLANK(Product__c)
))</errorConditionFormula>
        <errorMessage>Offer and Product fields are mandatory for ZOffer type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>One_Off_13_Week_Price_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
RecordType.Name == &apos;Offer&apos;,
(
INCLUDES(TCodeManagement__r.Payment_Type__c,&apos;Allow One Off 13 Week&apos;) ||
INCLUDES(TCodeManagement__r.Payment_Type__c,&apos;Allow 13 Week DD&apos;) ||
INCLUDES(TCodeManagement__r.Payment_Type__c,&apos;Allow 13 Week CCA&apos;)
)
,
ISBLANK(X13_Week_Price__c))</errorConditionFormula>
        <errorDisplayField>X13_Week_Price__c</errorDisplayField>
        <errorMessage>One off 13 week option requires 13 week price field to be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Premium_Price_For_Low_Start_TCode</fullName>
        <active>true</active>
        <description>Premium Weekly Price has to be specified for a Low Start TCode.</description>
        <errorConditionFormula>AND( RecordType.Name == &apos;Offer&apos;, OR(ISBLANK(Weekly_Price__c), Weekly_Price__c &lt; 0), ISPICKVAL(TCodeManagement__r.Type__c,&apos;Low Start&apos;))</errorConditionFormula>
        <errorDisplayField>Weekly_Price__c</errorDisplayField>
        <errorMessage>You have to specify a valid Premium Weekly Price for Low Start TCode type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zuora_Offer_Product_Match</fullName>
        <active>true</active>
        <description>Product has to match related Offer product.</description>
        <errorConditionFormula>AND(RecordType.Name==&apos;Zuora Offer&apos;, NOT(ISBLANK(Offer__c)), Product__c !=  Offer__r.ZProduct__c )</errorConditionFormula>
        <errorDisplayField>Offer__c</errorDisplayField>
        <errorMessage>Selected product has to match related offer product.</errorMessage>
    </validationRules>
</CustomObject>